        * make Mgd::validate_dbh() re-check/ping slave dbhs as well.
          (problem mentioned by Steven Shou <steven.shou@verizon.net>)

        * support drive identifiers above sdz (Arjan <info@bouncetek.com>)

        * make mogstored's iostat child process properly shutdown,
          even when iostat binary isn't installed.  (previously
          it was stuck in a loop every 10 seconds, hoping for
          iostat to be installed, but never respecting parent
          process' death)

        * Change delete worker to use new DeviceStates interface.

        * Fix get_paths to honor new device state of 'drain' via new
          DeviceStates interface.

        * use signifigantly less CPU when re-broadcasting around
          iostat device utilization% to child processes.  (future:
          don't rebroadcast at all and use shared memory)

        * slightly faster fsck (do less syscalls)

        * efficiency: don't broadcast dup state information to children
          (track in parent what children know already)

        * if using Gearman::Server >= 1.09, respawn the fidsizes
          worker if it dies.

2007-05-09: Release version 2.16

        * BUG FIX from 2.15:  partially written but never closed
          tempfiles weren't being cleaned up properly.

        * start to work better when compiled as a stand-alone
          PAR all-in-one script/archive

2007-05-07: Release version 2.15 ("fsck/drain/rebalance")

        * minor bug fixes and enhancements for MultipleHosts replication
          policy.  bunch of corner cases now checked with new tests.
          now easy to write more replication policy tests in future.

        * replication policies can now return "desperate" requests,
          signalling that a replication reassessment should be
          enqueued for the future, to see if things could be improved.
          (that part's not currently implemented, but the real feature